--- a/HTML Templates/First Template/First Template.html
+++ b/HTML Templates/First Template/First Template.html
@@ -33,7 +33,7 @@
             </div>
            <div class="form">
             <h2>Login Here</h2>
-            <form onsubmit="return validate()" action="Saikiran.html">
+            <form onsubmit="return validate()" action="Resume.html">
             <input id="email" type="text" name="email" placeholder="Enter email here">
             <input id="pword" type="password" name=""password" placeholder="Enter password here">
             <button class="btn3" type="submit"><a href="#">Login</a></button>
